--- a/configure.ac
+++ b/configure.ac
@@ -93,6 +93,7 @@ PKG_PROG_PKG_CONFIG
 #PKG_CHECK_MODULES([xmimsim],libxmimsim >= 5.1)
 PKG_CHECK_MODULES([gtkmm],gtkmm-3.0 >= 3.12.0)
 PKG_CHECK_MODULES([gsl], gsl)
+PKG_CHECK_MODULES([plplotcxx], [plplot-c++])
 #PKG_CHECK_MODULES([libxmlmm], libxml++-2.6 >= 2.30.0)
 
 #search for xmlcatalog
@@ -128,4 +129,3 @@ fi
 
 
 AC_OUTPUT
-
