--- a/configure.ac
+++ b/configure.ac
@@ -89,7 +89,7 @@ PKG_PROG_PKG_CONFIG
 
 
 #search for xraylib and other modules
-#PKG_CHECK_MODULES([xraylib],libxrl >= 3.1.0)
+PKG_CHECK_MODULES([xraylib],libxrl >= 3.1.0)
 #PKG_CHECK_MODULES([xmimsim],libxmimsim >= 5.1)
 PKG_CHECK_MODULES([gtkmm],gtkmm-3.0 >= 3.12.0)
 PKG_CHECK_MODULES([gsl], gsl)
