--- a/configure.ac
+++ b/configure.ac
@@ -93,7 +93,8 @@ PKG_CHECK_MODULES([xraylib],libxrl >= 3.1.0)
 #PKG_CHECK_MODULES([xmimsim],libxmimsim >= 5.1)
 PKG_CHECK_MODULES([gtkmm],gtkmm-3.0 >= 3.12.0)
 PKG_CHECK_MODULES([gsl], gsl)
-PKG_CHECK_MODULES([plplotcxx], [plplot-c++])
+PKG_CHECK_MODULES([plplotcxx], [plplot-c++], , 
+ [PKG_CHECK_MODULES([plplotcxx], [plplotd-c++])])
 #PKG_CHECK_MODULES([libxmlmm], libxml++-2.6 >= 2.30.0)
 
 #search for xmlcatalog
