Chi2pdh: plot support added

--- a/bin/common/Makefile.am
+++ b/bin/common/Makefile.am
@@ -2,4 +2,9 @@ noinst_LTLIBRARIES = libcommon.la
 
 libcommon_la_SOURCES = \
                        chifile.h \
-                       chifile.cpp
+                       chifile.cpp \
+                       bam_plplot_window.h \
+                       bam_plplot_window.cpp
+
+libcommon_la_CXXFLAGS = $(gtkmm_CFLAGS)
+libcommon_la_LIBADD = $(gtkmm_LIBS)
